# open_pdks

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.in  README  README.md  configure  docs.txt  pdk.patch  tatus
.github/: Dockerfile  Makefile  build-docker.sh  build.sh  capture.sh  test.sh
.github/actions/setup_nix/: action.yml
.github/workflows/: ci.yaml  ci.yml
.travisCI/: Dockerfile  Makefile  build-docker.sh  travisBuild.sh  travisTest.sh
common/: README  cace.py  cace_datasheet_upload.py  cace_design_upload.py  cace_gensim.py  cace_launch.py  cace_makeplot.py  cdl2spi.py  change_gds_cell.py  change_gds_date.py  change_gds_string.py  cleanup_unref.py  compare_dirs.py  consoletext.py  convert_spectre.py  create_gds_library.py  create_lef_library.py  create_lib_library.py  create_project.py  create_spice_library.py  create_verilog_library.py  editparam.py  failreport.py  find_all_devices.py  find_gds_prefix.py  fix_missing_lef.py  fix_subckt_params.py  fixspice.py  foundry_install.py  foundry_nodes.py  gate_list.txt  get_gds_date.py  helpwindow.py  insert_layer.py  insert_property.py  listboxchoice.py  make_icon_from_soft.py  makestub.py  natural_sort.py  netlist_to_layout.py  (+29 more)
common/bash_scripts/: fixed_devices_proc_generation.sh
common/orig/: foundry_install.py
gf180mcu/: .gitignore  Makefile.in  NOTES  README  gf180mcu.json
gf180mcu/custom/scripts/: convert_io_cdl.py  convert_sc_cdl.py  convert_sram_cdl.py  fix_digital_lef.py  fix_io_cor_gds.py  fix_io_lef.py  fix_related_bias_pins.py  fix_sram_gds.py  fix_stdcell_gds.py  fix_techlef.py  fix_xschemrc.py  gds_import_io.tcl  gds_import_ocd_sram.tcl  gds_import_sc.tcl  gds_import_sram.tcl  inc_verilog.py  make_minmax_techlef.py  make_primitive.py
gf180mcu/custom/xschem/: xschemrc_append
gf180mcu/librelane/: config.tcl  rules.openrcx.gf180mcuC.max  rules.openrcx.gf180mcuC.min  rules.openrcx.gf180mcuD.min.magic
gf180mcu/librelane/gf180mcu_as_sc_mcu7t3v3/: config.tcl  mux2_map.v  synth_exclude.cells  tracks.info
gf180mcu/librelane/gf180mcu_fd_io/: config.tcl
gf180mcu/librelane/gf180mcu_fd_sc_mcu7t5v0/: all.cells  config.tcl  latch_map.v  no_synth.cells  sorted.cells  synth_exclude.cells  tribuff_map.v
gf180mcu/librelane/gf180mcu_fd_sc_mcu9t5v0/: all.cells  config.tcl  latch_map.v  sorted.cells  synth_exclude.cells  tribuff_map.v
gf180mcu/librelane/gf180mcu_ocd_io/: config.tcl
gf180mcu/librelane/gf180mcu_osu_sc_gp12t3v3/: config.tcl
gf180mcu/librelane/gf180mcu_osu_sc_gp9t3v3/: config.tcl
gf180mcu/magic/: gf180mcu.magicrc  gf180mcu.tcl  gf180mcu.tech  gf180mcu_make_torture.tcl  gf180mcugds.tech
gf180mcu/netgen/: gf180mcu_setup.tcl
gf180mcu/openlane/: config.tcl  rules.openrcx.gf180mcuC.max.magic  rules.openrcx.gf180mcuC.min.magic  rules.openrcx.gf180mcuC.nom  rules.openrcx.gf180mcuC.nom.magic  rules.openrcx.gf180mcuD.max.magic  rules.openrcx.gf180mcuD.nom.magic
gf180mcu/openlane/gf180mcu_fd_sc_mcu7t5v0/: config.tcl  drc_exclude.cells  no_synth.cells
gf180mcu/openlane/gf180mcu_fd_sc_mcu9t5v0/: config.tcl  no_synth.cells  tracks.info
gf180mcu/qflow/: gf180mcu.par  gf180mcu.sh
runtime/: cace.py  cace_datasheet_upload.py  cace_design_upload.py  cace_gensim.py  cace_launch.py  cace_makeplot.py  cdl2spi.py  change_gds_cell.py  change_gds_string.py  changepath.py  changetech.sh  characterize_help.txt  cleanup_unref.py  compare_dirs.py  config.py  create_lef_library.py  create_project.py  editparam.py  failreport.py  file_compressor.py  find_gds_prefix.py  foundry_nodes.py  gate_list.txt  helpwindow.py  listboxchoice.py  make_icon_from_soft.py  manager_help.txt  netlist_to_layout.py  pdk.prm  preproc.py  print_subckt_params.py  profile.py  project_manager.py  qflow_help.txt  rename_project.py  settings.py  simhints.py  soc_floorplanner.py  spice_model_red.py  spiceunits.py  (+6 more)
scripts/: .gitignore  configure  configure.ac  download.sh  print_tools_make.pl  tools.txt  update.sh
sky130/: .gitignore  Makefile  Makefile.in  README  common_pdn.tcl  config.tcl  nodeinfo.json  pdk_info  pdk_url  sky130.json  sky130.tcl  sky130.tech  sky130_fd_sc_hd_config.tcl  sky130gds.tech
sky130/custom/drc/: capm.mag  difftap.mag  (+25 more)
sky130/irsim/: README  circuit_template.spi  ckt_1v62_125.spi  ckt_1v62_27.spi  ckt_1v62_n40.spi  ckt_1v62_n5.spi  ckt_1v80_125.spi  ckt_1v80_27.spi  ckt_1v80_n40.spi  ckt_1v80_n5.spi  ckt_1v98_125.spi  ckt_1v98_27.spi  ckt_1v98_n40.spi  ckt_1v98_n5.spi  config.txt  findr  getres  header.txt  resists  run_all.py  run_all.sh  sky130A_1v62_27.prm  sky130A_1v62_n40.prm  sky130A_1v62_n5.prm  sky130A_1v80_125.prm  sky130A_1v80_27.prm  sky130A_1v80_n40.prm  sky130A_1v80_n5.prm  sky130A_1v98_125.prm  sky130A_1v98_27.prm  sky130A_1v98_n40.prm  sky130A_1v98_n5.prm  sky130_1v62_27.prm  sky130_1v62_n40.prm  sky130_1v62_n5.prm  sky130_1v80_125.prm  sky130_1v80_27.prm  sky130_1v80_n40.prm  sky130_1v80_n5.prm  sky130_1v98_125.prm  (+30 more)
sky130/klayout/: LICENSE  README  klayoutrc  lvs_sky130.lylvs  sky130.lydrc  sky130.lyp  sky130.lyt  sky130A.lyt  sky130A_mr.drc  sky130A_mr.lydrc  sky130A_mr_reram.drc  sky130A_non-mr.drc  sky130B.lyp  sky130B.lyt  sky130_mr.drc  test_violators.gds
sky130/librelane/: config.tcl  rules.openrcx.sky130A.min.spef_extractor  rules.openrcx.sky130A.nom.magic  rules.openrcx.sky130A.nom.spef_extractor  rules.openrcx.sky130B.nom.magic
sky130/magic/: sky130.magicrc  sky130.tcl  sky130.tech  sky130gds.tech
sky130/netgen/: sky130_setup.tcl
sky130/openlane/: common_pdn.tcl  config.tcl  openrcx.max.rules  openrcx.max.rules.magic  openrcx.max.rules.spef_extractor  openrcx.min.rules  openrcx.nom.rules  rcx_rules.info  rules.openrcx.sky130A.max.magic  rules.openrcx.sky130A.min.magic  rules.openrcx.sky130A.nom.magic  rules.openrcx.sky130B.max.magic  rules.openrcx.sky130B.min.magic  rules.openrcx.sky130B.nom.magic
sky130/openrcx/: rules.openrcx.sky130A.max.magic  rules.openrcx.sky130A.nom.magic  rules.openrcx.sky130B.nom.magic
sky130/qflow/: sky130.par  sky130.sh  sky130osu.sh
sky130/xcircuit/: ngspice.lps  sky130.xcircuitrc  sky130_fd_pr.lps  sky130_fd_sc_hd.lps
(+899 files in other folders)
